created all files

--- a/category.html
+++ b/category.html
@@ -29,13 +29,13 @@
           
           <li><a href="dashboard.html">Location</a></li>
           <li class="sidebar--active"><a href="category.html">Category</a></li>
-          <li><a href="#">Sub Category</a></li>
-          <li><a href="#">Discounts</a></li>
-          <li><a href="#">Promo Code</a></li>
-          <li><a href="#">Slots</a></li>
-          <li><a href="#">Services for today</a></li>
-          <li><a href="#">Service Bookings</a></li>
-          <li><a href="#">Ratings</a></li>
+          <li><a href="sub-category.html">Sub Category</a></li>
+          <li><a href="discounts.html">Discounts</a></li>
+          <li><a href="promocode.html">Promo Code</a></li>
+          <li><a href="slots.html">Slots</a></li>
+          <li><a href="service-for-today.html">Services for today</a></li>
+          <li><a href="service-bookings.html">Service Bookings</a></li>
+          <li><a href="ratings.html">Ratings</a></li>
 
         </ul>
       </div>
