--- a/promocode.html
+++ b/promocode.html
@@ -360,6 +360,33 @@
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/main.js"></script>
   <script src="./assets/js/pagination.js"></script>
+  <script src="./assets/js/sweetalert2.all.min.js"></script>
+
+  <script>
+    $(".fa-trash").click(function () {
+        swal({
+          title: "Are you sure?",
+          text: "You want to delete this Category",
+          type: "warning",
+          showCancelButton: true,
+          confirmButtonColor: "#DD6B55",
+          confirmButtonText: "Yes, delete it!",
+        }).then(result => {
+          if (result.dismiss === 'cancel') {
+            swal.closeModal();
+            return;
+          }
+          swal({
+            type: "success",
+            text: 'Category has been deleted!',
+            showConfirmButton: false,
+            timer: 1500
+          });
+
+        },
+        )
+      })
+  </script>
 
 </body>
 
