--- a/category.html
+++ b/category.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Salonee | Dashboard</title>
   <!-- fonts  -->
+  <link rel="stylesheet" href="./assets/css/bootstrap-select.min.css">
+
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
     rel="stylesheet">
@@ -15,6 +17,19 @@
   <!-- SweetAlert2 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.2.0/sweetalert2.min.css">
 
+
+  <style>
+    .bootstrap-select .bs-ok-default::after {
+      width: 0.3em;
+      height: 0.6em;
+      border-width: 0 0.1em 0.1em 0;
+      transform: rotate(45deg) translateY(0.5rem);
+    }
+
+    .btn.dropdown-toggle:focus {
+      outline: none !important;
+    }
+  </style>
 </head>
 
 <body>
@@ -229,6 +244,17 @@
                   <input type="text" id="category" class="form-control" autocomplete="off" required>
                   <label class="form-control-placeholder p-0" for="category">Category Name</label>
                 </div>
+                <div class="form-group  mt-4">
+                  <select multiple name="service" class="form-control selectpicker w-100" autocomplete="off" required>
+                    <option value="category1">Category Name-1</option>
+                    <option value="category2">Category Name-2</option>
+                    <option value="category3">Category Name-3</option>
+                  </select>
+                  <!-- <label class="form-control-placeholder p-0" for="category">Category Name</label> -->
+
+
+                </div>
+
 
                 <div class="form-group mb-5">
                   <label for="file-upload" class="custom-file-upload">
@@ -249,13 +275,17 @@
     </div>
     <!-- partial -->
     <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script> -->
+    <script src="./assets/bootstrap-4.3.1/js/popper.min.js"></script>
 
     <script src='./assets/js/jquery-3.3.1.min.js'></script>
     <script src="./assets/js/sweetalert2.all.min.js"></script>
     <script src="./assets/bootstrap-4.3.1/js/bootstrap.min.js"></script>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/pagination.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="./assets/js/bootstrap-select.min.js"></script>
 
+    <!-- (Optional) Latest compiled and minified JavaScript translation files -->
 
     <script>
       $(".fa-trash").click(function () {
@@ -280,7 +310,12 @@
 
         },
         )
-      })
+      });
+
+      $(function () {
+        $('.selectpicker').selectpicker();
+      });
+
     </script>
 
 </body>
