--- a/dashboard.html
+++ b/dashboard.html
@@ -58,7 +58,7 @@
           </div>
 
           <div class="main__header-user">
-
+            <h4 class="usrName">Welcome to <span>Service Provider</span></h4>
             <button type="button" class="main__header-user-toggle" data-toggle="dropdown" data-toggle-for="user-menu"
               role="button">
               <span class="main__header-user-toggle-picture">
@@ -66,11 +66,17 @@
               </span>
             </button>
             <!-- <div class="main__header-user-menu dropdown-menu" > -->
-            <ul class="main__header-user-menu-content dropdown-menu" >
+            <ul class="main__header-user-menu-content dropdown-menu">
               <li>
                 <div class="main__header-user-menu-header ">
-                  <h3>Peter Park</h3>
-                  <span>Service Provider</span>
+                  <div class="proCircle inBlk">
+                    <img src="./assets/img/admin/avatar-male.png" alt="">
+                  </div>
+                  <div class="inBlk">
+                    <h3>Peter Park</h3>
+                    <span>Service Provider</span>
+                </div>
+                  
                 </div>
               </li>
               <li data-toggle="modal" data-target="#myProfile"><a class="d-m" href="#"><i
@@ -82,6 +88,7 @@
             <!-- </div> -->
           </div>
         </div>
+        <div class="clearfix"></div>
         <div class="main__content">
 
           <div class=" f-right">
