--- a/sub-category.html
+++ b/sub-category.html
@@ -86,7 +86,7 @@
             </div>
           </div>
 
-          <div class="form-group f-right">
+          <div class="rightBtn">
             <button class="btn login-btn" data-toggle="modal" data-target="#addSubCategory" id="myButton">Add &nbsp;<i
                 class="fa fa-plus" aria-hidden="true"></i></button>
 
